feat: added file logger

--- a/config_logging.ini
+++ b/config_logging.ini
@@ -6,7 +6,12 @@ handlers=console
 level=INFO
 
 [handlers]
-keys=console
+keys=console, file
+
+[handler_file]
+class=FileHandler
+formatter=format
+args=("logs.txt","a")
 
 [handler_console]
 class=StreamHandler
