feat: added doc comments

--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,12 @@
 ; the url to monitor
 ;url=http//wwww.google.com
 
+; save the downloaded content of the url once in this file
 template=index.html
 
 [mail]
 
+; the smtp host
 ;host=
 
 ;from=
@@ -15,4 +17,5 @@ template=index.html
 
 ;subject=
 
+; the smtp port
 port=25
