fixed logging exception

--- a/config_logging.ini
+++ b/config_logging.ini
@@ -11,7 +11,7 @@ keys=console, file
 [handler_file]
 class=FileHandler
 formatter=format
-args=("logs.txt","a",delay=True)
+args=("logs.txt","a")
 
 [handler_console]
 class=StreamHandler
