add support for multiple urls

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,8 @@
-[general]
+[urls]
+; a list of key=url pairs, e.g.
+;facebook=http://facebook.com
 
-; the url to monitor
-;url=http//wwww.google.com
 
-; save the downloaded content of the url once in this file
-template=index.html
 
 [mail]
 
